-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
5.11.2, 5.11.3
-
None
-
-
1ac7bf1ed45644b68b8cbf24b34aa39a812b7739 (qt/qtbase/dev) 7d9f0cd3929474767fdad554f7cee4539689ce8f (qt/qtbase/5.15)
Crash occurs when double-clicking the left mouse button and right mouse button under QMenu;
The error log is as follows:
0x00007fb5ee19abd0 in AtSpiAdaptor::windowActivated(QObject*, bool)
(this=0x7fb5de5dbd40, window=0x7fb5ed47c7c0, active=<optimized out>)
at ../../../include/QtCore/../../src/corelib/tools/qarraydata.h:255
#1 0x00007fb5f59d4876 in QMetaObject::activate(QObject*, int, int, void**)
(sender=0x7fb5de5f4220, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at kernel/qobject.cpp:3771
#2 0x00007fb5ee1a8fcd in QSpiApplicationAdaptor::windowActivated(QObject*, bool)
(this=<optimized out>, _t1=<optimized out>, _t2=<optimized out>, _t2@entry=false)
at .moc/moc_application_p.cpp:147
#3 0x00007fb5ee1a81af in QSpiApplicationAdaptor::eventFilter(QObject*, QEvent*)
(this=0x7fb5de5f4220, target=0x7fb5ed47c7c0, event=<optimized out>) at application.cpp:95
#4 0x00007fb5f59ab0db in QCoreApplicationPrivate::sendThroughApplicationEventFilters(QObject*, QEvent*)
(event=<optimized out>, receiver=<optimized out>, this=<optimized out>)
at kernel/qcoreapplication.cpp:1157
#5 0x00007fb5f59ab0db in QCoreApplicationPrivate::sendThroughApplicationEventFilters(QObject*, QEvent*)
(this=this@entry=0x7fb5eece1300, receiver=receiver@entry=0x7fb5ed47c7c0, event=event@entry=0x7ffdd92ba580) at kernel/qcoreapplication.cpp:1142
#6 0x00007fb5f64c7518 in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=this@entry=
0x7fb5eece1300, receiver=receiver@entry=0x7fb5ed47c7c0, e=e@entry=0x7ffdd92ba580)
at /usr/include/c++/8/bits/atomic_base.h:707
#7 0x00007fb5f64ce990 in QApplication::notify(QObject*, QEvent*)
(this=0x7ffdd92baf10, receiver=0x7fb5ed47c7c0, e=0x7ffdd92ba580) at kernel/qapplication.cpp:3485
#8 0x00007fb5f6c72b26 in Dtk::Widget::DApplication::notify(QObject*, QEvent*) ()
-Type <RET> for more, q to quit, c to continue without paging-
at /lib/x86_64-linux-gnu/libdtkwidget.so.5
#9 0x00007fb5f59ab4f9 in QCoreApplication::notifyInternal2(QObject*, QEvent*)
(receiver=receiver@entry=0x7fb5ed47c7c0, event=event@entry=0x7ffdd92ba580)
at ../../include/QtCore/5.11.3/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:307
#10 0x00007fb5f64cc9ef in QCoreApplication::sendSpontaneousEvent(QObject*, QEvent*)
(event=0x7ffdd92ba580, receiver=0x7fb5ed47c7c0)
at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:237
#11 0x00007fb5f64cc9ef in QApplication::setActiveWindow(QWidget*) (act=act@entry=0x0)
at kernel/qapplication.cpp:2122
#12 0x00007fb5f64eccf7 in QWidgetPrivate::deactivateWidgetCleanup() (this=this@entry=0x7fb5de8b3880)
at kernel/qwidget.cpp:2480
#13 0x00007fb5f64f9679 in QWidget::destroy(bool, bool)
(this=this@entry=0x7fb5ed47c7c0, destroyWindow=destroyWindow@entry=true, destroySubWindows=destroySubWindows@entry=true) at kernel/qwidget.cpp:12432
#14 0x00007fb5f6500e42 in QWidget::~QWidget() (this=0x7fb5ed47c7c0, __in_chrg=<optimized out>)
at kernel/qwidget.cpp:1710
#15 0x00007fb5f6634749 in QMenu::~QMenu() (this=0x7fb5ed47c7c0, __in_chrg=<optimized out>)
at widgets/qmenu.cpp:1724
#16 0x00007fb5f59d5110 in QObject::event(QEvent*)
(this=this@entry=0x7fb5ed47c7c0, e=e@entry=0x7fb5de7040e0) at kernel/qobject.cpp:1242
#17 0x00007fb5f650598b in QWidget::event(QEvent*)
(this=this@entry=0x7fb5ed47c7c0, event=event@entry=0x7fb5de7040e0) at kernel/qwidget.cpp:9353
#18 0x00007fb5f663e4cb in QMenu::event(QEvent*) (this=0x7fb5ed47c7c0, e=0x7fb5de7040e0)
For Gerrit Dashboard: QTBUG-84643 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
306347,12 | Linux: fix crash in AtSpi adaptor when handling window activation | dev | qt/qtbase | Status: MERGED | +2 | 0 |
307614,6 | Linux: fix crash in AtSpi adaptor when handling window activation | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |
320285,7 | Linux: fix crash in AtSpi adaptor when handling window activation | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |
320376,3 | Linux: fix crash in AtSpi adaptor when handling window activation | 5.15 | qt/qtbase | Status: ABANDONED | 0 | 0 |