Linux: fix crash in AtSpi adaptor when handling window activation

fix The window has been quickly activated or disabled will cause a crash .

Fixes: QTBUG-84643
Change-Id: I0fd0918a3fc1898ddffd97009a4e92702ecd9ed4
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 1ac7bf1ed45644b68b8cbf24b34aa39a812b7739)
Reviewed-by: Liang Qi <liang.qi@qt.io>